--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "ava": "^0.19.1",
     "stylelint": "^7.10.1"
+  },
+  "dependencies": {
+    "stylelint-order": "^0.4.3"
   }
 }
